<resources>
    <string name="app_name">Betna</string>
    <string name="field_req">Field Required</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="please_enter_the_activation_code_sent_to">Please enter the activation code sent to</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="failed">Faild</string>
    <string name="wait">Wait</string>
    <string name="start">Start</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="top_services">Top Services</string>
    <string name="show_all">Show All</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="departments">Departments</string>
    <string name="search_for_service">Search For Service</string>
    <string name="there_are_no_current_requests_please_request_the_right_services_for_you">There are no current requests \n please request the right services for you.</string>
    <string name="there_are_no_pre_requests_please_request_the_right_services_for_you">There are no Previous requests</string>

    <string name="services">Services</string>
    <string name="phone_found">Phone Found</string>
    <string name="status">Status</string>
    <string name="egp">EGP</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="my_profile">My Profile</string>
    <string name="my_previous_orders">My Previous Orders</string>
    <string name="my_rates">My Rates</string>
    <string name="more">More</string>
    <string name="language">Language</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="deleget_app">Deleget App</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="inv_email">Invaild Email</string>
    <string name="suc">Sucess</string>
    <string name="reorder">Re Order</string>
    <string name="rate_service">Rate Service</string>
    <string name="rate">rate</string>
    <string name="write_comment">Write Comment</string>
    <string name="service_detials">Service Detials</string>
    <string name="previous_work">Gallery</string>
    <string name="customer_rates">Customer Rates</string>
    <string name="order_now">Order Now</string>
    <string name="service_request">Service Request</string>
    <string name="the_price_of_the_service_varies_according_to_the_area_and_the_type_of_location_in_which_the_service_will_be_performed">The price of the service varies according to the area and the type of location in which the service will be performed</string>
    <string name="choose_day">Choose Day : </string>
    <string name="location_type">Location Type :</string>
    <string name="site_area_m">Site area (m) :</string>
    <string name="total" />
    <string name="pay">Pay</string>
    <string name="select">Select</string>
    <string name="pay_ment">Pay Ment</string>
    <string name="service_type">Service Type</string>
    <string name="day">Day</string>
    <string name="area">Area</string>
    <string name="total2">Total</string>
    <string name="write_a_note">Write A Note</string>
    <string name="all">All</string>
    <string name="order_sent">Request is Done</string>
    <string name="accept">Order Accept</string>
    <string name="is_start">Start</string>
    <string name="preparing">Preparing</string>
    <string name="end">End</string>
    <string name="the_request_has_been_sent_and_is_awaiting_approval">The request has been sent and is awaiting approval</string>
    <string name="order_status">Order Status</string>
    <string name="equipment_is_being_prepared_to_fulfill_your_order">Equipment is being prepared to fulfill your order</string>
    <string name="your_request_has_been_started">Your request has been started</string>
    <string name="we_thank_you_for_choosing_us_to_implement_your_request_and_we_hope_you_liked_it">We thank you for choosing us to implement your request, and we hope you liked it</string>
    <string name="order_detials">Order Detials</string>
    <string name="notifications">Notifications</string>
    <string name="write_address">Write Address</string>
    <string name="ch_gover">Choose Governate</string>
    <string name="ch_city">Choose City</string>
    <string name="ch_sub">Choose Sub Location</string>
    <string name="fees">Fees will be added </string>
    <string name="meters">Meters</string>
    <string name="price">price</string>
    <string name="cost">Cost</string>
    <string name="shipping">Fees</string>
    <string name="total3">Total</string>
    <string name="number_blocked">Your number is blocked please, try again after 24 hour</string>
    <string name="back">Back</string>
    <string name="payment_way">Payment way</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="online_payment">Online payment</string>
    <string name="accept1">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="please_accept_terms">Please Accept Terms And Condition</string>
    <string name="cash_on_delivery1">Cash</string>
    <string name="online_payment1">Online</string>
    <string name="suc_part">Success Partners The Arab Group</string>
    <string name="meter_must_be">"Number Of Meters Must Be More Than "</string>
</resources>