<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.betna.models.ServiceModel" />

        <variable
            name="backListener"
            type="com.betna.interfaces.Listeners.BackListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray25"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:cardBackgroundColor="@color/white">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"


                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/rounded_gray28">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:padding="5dp"
                                android:rotation='@{lang.equals("en")?180:0}'
                                android:src="@drawable/ic_arrow_right"

                                app:tint="@color/black" />
                        </FrameLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:clickable="false"
                            android:gravity="center"
                            android:longClickable="false"
                            android:text="@string/service_request"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </LinearLayout>


                </androidx.appcompat.widget.Toolbar>
            </androidx.cardview.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="90dp"
                android:background="@color/gray25"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_strock_primary">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="top
"
                                android:padding="5dp"

                                android:src="@drawable/ic_info2"

                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:clickable="false"
                                android:lineSpacingExtra="5dp"
                                android:longClickable="false"
                                android:text="@string/the_price_of_the_service_varies_according_to_the_area_and_the_type_of_location_in_which_the_service_will_be_performed"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/tvdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:gravity="start"
                        android:longClickable="false"
                        android:text="@string/choose_day"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tvDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="18dp"
                        android:clickable="false"
                        android:gravity="start"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:gravity="start"
                        android:longClickable="false"
                        android:text="@string/location_type"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recviewtype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:gravity="start"
                        android:longClickable="false"
                        android:text="@string/site_area_m"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <SeekBar
                            android:id="@+id/progressBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:secondaryProgress="0"

                            />

                        <TextView
                            android:id="@+id/progressBarinsideText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:gravity="center" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write_a_note"
                        android:textColor="@color/black"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="false"
                        android:gravity="center"
                        android:longClickable="false"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtNote"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded_strock_gray7"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:id="@+id/fltotal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:background="@drawable/small_rounded_white_stroke"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/total"

                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text='@{model.price+""}'
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp"

                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@string/egp"

                                android:textColor="@color/colorAccent"
                                android:textSize="16sp"

                                />
                        </LinearLayout>
                    </LinearLayout>


                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btBuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_primary"
                        android:padding="3dp"
                        android:text="@string/pay"
                        android:textColor="@color/white" />
                </LinearLayout>
            </FrameLayout>

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</layout>
