<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="lang"
            type="String"

            />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray25"
        >

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/flSlider"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
            <ProgressBar
                android:id="@+id/progBarSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                />


        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/top_services"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/show_all"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
               />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
         >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewTopService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <ProgressBar
                android:id="@+id/progBarTopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvNoDataTopService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/departments"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>


        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
           >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recViewDepartments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <ProgressBar
                android:id="@+id/progBarDepartments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvNoDataDepartments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

      
    </FrameLayout>

</layout>